{
    "name": "ControlMap",
    "maps": [
        {
            "name": "Player",
            "id": "b01f85ba-e837-4845-b351-e0d2feb4a3f5",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "ce554266-7618-425e-8fbf-b5e8acbb1809",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0930c4c5-e793-4f79-a9c7-7b5fda08aa07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "throw",
                    "type": "Button",
                    "id": "aaedfab7-c87e-4232-9673-0e009e2b48f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "pickupAndDrop",
                    "type": "Button",
                    "id": "7ec99c84-f55d-4a72-8370-770efcaa9141",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "inventory",
                    "type": "Button",
                    "id": "8c1091c6-bcfe-4006-ae16-5003632d98c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "crouch",
                    "type": "Button",
                    "id": "da947fa7-fa7e-49e3-9a1e-1f23349de493",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "dea93d23-d635-4bdd-8d2c-4a56eadf3fd7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "69553fda-6ab5-4f5b-9d2f-f827122a3dc1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3ce5ef49-b51b-4af9-969e-12049e37cc4e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ed382f44-6a21-42a5-8921-9548b47fee20",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fac414af-25c5-400f-bd0e-11f07cf708e0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b5c9a701-79e4-4e29-abfc-d28820dca5ac",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35d07ca3-d7e0-44dc-a7f8-2208ef80387f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fffb37c-552e-4608-9976-0b78d77e08d8",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pickupAndDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f68e2402-5c3c-426a-8df4-007f4b3a37a7",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21c6308d-3678-45f5-8804-eefae916beca",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Persistant",
            "id": "d4e1e94e-ab66-4e54-b18d-d65cc9389dab",
            "actions": [
                {
                    "name": "lookAdditive",
                    "type": "Value",
                    "id": "b95a0587-0cbc-430a-b9a5-194504e25d62",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "lookDelta",
                    "type": "Value",
                    "id": "eebbf6af-a347-4b15-9003-67c9964f6cfa",
                    "expectedControlType": "Vector2",
                    "processors": "ScaleVector2(y=-1)",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cf57d58b-10c9-4327-b979-d5b3c98f5afe",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "lookDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3178df3c-b6fc-4c34-a577-e39a7362dfd1",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "lookAdditive",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}